Rettet make Makefiler til make start

--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Gør følgende (Linier med * udføres kun første gang)
   cd public_html
 * cvs -d /usr/local/CVSROOT checkout linuxbog
   cd linuxbog
-  make Makefiler
+  make start
   cd BOGNAVN
   make html
 
