--- a/README
+++ b/README
@@ -2,10 +2,10 @@ Dette katalog indeholder eksempler svarende til
 bogen, hvis vi har ment dette er relevant.
 
 Seneste bøger kan findes på 
-http://www.sslug.dk/linuxbog
+http://www.linuxbog.dk
 
 Udviklingen foregår på
-http://cvs.sslug.dk/linuxbog
+http://cvs.linuxbog.dk
 
 ---------------------------------------
 Vedledning i at få fat i bøgerne via CVS
@@ -13,12 +13,12 @@ Vedledning i at få fat i bøgerne via CVS
 Vis at du vil være aktiv med bøgerne og
 kan arbejde ansvarligt med bøgerne :)
 Få login på tyge.sslug.dk ved at skrive til
-Peter Toft <pto@sslug.dk> og gør følgende.
+Peter Toft <pto@linuxbog.dk> og gør følgende.
 
 Installer OpenSSH på din maskine og følg 
 vejledningen på 
-http://cvs.sslug.dk/linuxbog/sikkerhed/bog/sikker-net-trafik.html
-http://cvs.sslug.dk/linuxbog/sikkerhed/bog/opsaetning-af-openssh.html
+http://cvs.linuxbog.dk/sikkerhed/bog/sikker-net-trafik.html
+http://cvs.linuxbog.dk/sikkerhed/bog/opsaetning-af-openssh.html
 
 Gør følgende (Linier med * udføres kun første gang)
 
@@ -36,7 +36,7 @@ Så kan du køre
 Netscape http://cvs.sslug.dk/~DITLOGIN/linuxbog/java/bog
 
 Og teksten kommer på web hver morgen
-http://cvs.sslug.dk/linuxbog/
+http://cvs.linuxbog.dk
 
 Hvis du gerne vil have filerne hjem, så kan du sætte
 følgende miljø-variabel (environment-variable)
@@ -48,7 +48,7 @@ cvs -d DITLOGIN@tyge.sslug.dk:/usr/local/CVSROOT checkout linuxbog
 
 hvorefter du bør få bogen checket ud.
 
-Læs http://cvs.sslug.dk/linuxbog/program/bog/vaerktoej.html#VAERKTOEJ-CVS
+Læs http://cvs.linuxbog.dk/program/bog/vaerktoej.html#VAERKTOEJ-CVS
 
 -----------------------------------------
 
@@ -69,8 +69,8 @@ liste? De vil indeholde info om hvem som lavede
 ændret (linuxbog) og hvilke filer som er ændret (her 
 kun hjaelpe.html) og man få den log-besked vi skriver 
 hver gang (kan ses i 
-http://cvs.sslug.dk/linuxbog/cvs2html/ ->
-http://cvs.sslug.dk/linuxbog/cvs2html/cvs_crono.html)
+http://cvs.linuxbog.dk/cvs2html/ ->
+http://cvs.linuxbog.dk/cvs2html/cvs_crono.html)
 Man får således ikke selve ændringen at se kun 
 log-beskeden og hvad der er ændret - og af hvem.
 
@@ -78,7 +78,7 @@ log-beskeden og hvad der er ændret - og af hvem.
 
 Vejledning i at skrive
 
-Læs http://cvs.sslug.dk/linuxbog/dokumentation/bog/docbook.html
+Læs http://cvs.linuxbog.dk/dokumentation/bog/docbook.html
 
 Hver bog er organiseret gennem bog.sgml og indhold.sgml
 pga. integration med "alle-upgaven" (alle bøgerne 
