Notation for skrivning

--- a/README
+++ b/README
@@ -124,3 +124,55 @@ enkelte bog - men med ../../../ sat foran stien. På den
 måde vil alle-bogen også være opdateret.
 
  <!entity java-VM SYSTEM "../../../VM.sgml">
+
+---------------------------------------
+Notation for skrivning
+
+For at bøgerne ligner hinanden mest muligt i de viste
+eksempler, skal der anvendes samme brugernavn og
+maskinnavn i alle bøger.
+
+Den primære bruger er 'tyge' og hans fulde navn er
+'Tyge Brahe'. Denne bruger symbolisere brugeren
+selv. Skal der illustreres andre brugere der 
+kommunikeres med, eller der skal oprettes på et
+system, bruges:
+ otto 'Otto Brahe'
+ axel 'Axel Brahe'
+
+Valget af 'tyge', 'otto' og 'axel' udemærker sig ved
+at de alle har 4 tegn i navnet, og giver overskuelig
+liste når de bliver brugt i eksempler.
+
+Den primære maskine som brugeren fysisk sidder ved
+hedder 'hven.sslug.dk', hvor normalt brug så blot er
+'hven'. Skal der kommunikeres med andre maskiner,
+hedder de:
+ saltholm.sslug.dk
+ peberholm.sslug.dk
+
+E-mail eksempler:
+ "Tyge Brahe" <tyge@sslug.dk>
+ "Tyge Brahe" <tyge@hven.sslug.dk>
+ "Otto Brahe" <otto@saltholm.sslug.dk>
+ "Axel Brahe" <axel@peberholm.sslug.dk>
+
+En normal-prompt (bash) i homedir bliver så:
+ [tyge@hven ~]$
+
+Det er ikke på forhånd givet at 'otto' og 'axel'
+har login 'hven.sslug.dk', det skal fremgå af
+eksemplet.
+
+Baggrund: Tyge Brahe (latinsk: Tycho) er en kendt
+dansk astronom der blev født på Sjælland og voksede
+op i Skåne. Sidst bosat på Hven. Otto er hans far
+og Axel er hans bror.
+
+Valget af Tyge Brahe som eksempel betyder ikke at
+LinuxBog-redaktionen anerkender det Tychoniske-
+verdensbillede (jorden i midten). Jvf. afsnittet om
+tidszoner, tror vi heller ikke at jorden er flad,
+det ville dog have gjort det hele lidt nemmere.
+
+
