Jorden er i midten siger pto

--- a/README
+++ b/README
@@ -171,9 +171,10 @@ op i Skåne. Sidst bosat på Hven. Otto er hans far
 og Axel er hans bror.
 
 Valget af Tyge Brahe som eksempel betyder ikke at
-LinuxBog-redaktionen anerkender det Tychoniske-
-verdensbillede (jorden i midten). Jvf. afsnittet om
-tidszoner, tror vi heller ikke at jorden er flad,
-det ville dog have gjort det hele lidt nemmere.
+alle medlemmer af LinuxBog-redaktionen anerkender
+det Tychoniske-verdensbillede (jorden i midten).
+Jvf. afsnittet om tidszoner, tror heller ikke alle
+at jorden er flad, det ville dog have gjort det
+hele lidt nemmere.
 
 
