--- a/README
+++ b/README
@@ -59,8 +59,8 @@ I tilmelde jer <linuxbog-commit@tyge.sslug.dk> ved
 at skrive til <linuxbog-commit-subscribe@tyge.sslug.dk>
 
 I som har konto på tyge kan bruge 
-cd katalog
-cvs watch add 
+$ cd katalog
+$ cvs watch add 
 til at følge de filer I vil følge - eller denne nye 
 mulighed
 
