Vejledning i checkout af en enkelt bog. Rettelse af eftersætning til watch add, (til at følge de filer I vil følge->I er interess ...

--- a/README
+++ b/README
@@ -49,6 +49,14 @@ cvs -d DITLOGIN@tyge.sslug.dk:/usr/local/CVSROOT checkout linuxbog
 
 hvorefter du bør få bogen checket ud.
 
+Hvis du kun vil have en enkelt bog checket ud, bruger du top-navnet:
+cvs -d DITLOGIN@tyge.sslug.dk:/usr/local/CVSROOT checkout linuxbog/friheden
+
+Den samlede størrelse af CVS-checkout af alle bøger er ca. 30MB
+
+De enkelte bøger varierer fra < 1.0 MB (dokumentation) til 
+                                8.8 MB (applikationer)
+
 Læs http://cvs.linuxbog.dk/program/bog/vaerktoej.html#VAERKTOEJ-CVS
 
 -----------------------------------------
@@ -63,8 +71,7 @@ I som har konto på tyge kan bruge
  $ cd katalog
  $ cvs watch add 
 
-til at følge de filer I vil følge - eller denne nye 
-mulighed
+til at følge de filer I er interesserede i.
 
 Hvordan ser de mails så ud man kan modtage på den nye 
 liste? De vil indeholde info om hvem som lavede 
