Et par fejl rettet

--- a/README
+++ b/README
@@ -29,8 +29,10 @@ Gør følgende (Linier med * udføres kun første gang)
   cd public_html
 * cvs -d /usr/local/CVSROOT checkout linuxbog
   cd linuxbog
-  make start
+  ./configure
+  make bootstrap
   cd BOGNAVN
+  ./configure
   make html
 
 Så kan du køre
