Base-dir README har fået mere information om Mads' ./configure og et afsnit om tag-id.

--- a/README
+++ b/README
@@ -40,6 +40,10 @@ Netscape http://cvs.sslug.dk/~DITLOGIN/linuxbog/java/bog
 Og teksten kommer på web hver morgen
 http://cvs.linuxbog.dk
 
+configure --help fortæller om nogle options, blandt andet
+--med-alle, som får make til at generere et arkiv og en
+samlet html-version af alle bøgerne.
+
 Hvis du gerne vil have filerne hjem, så kan du sætte
 følgende miljø-variabel (environment-variable)
 
@@ -136,6 +140,18 @@ måde vil alle-bogen også være opdateret.
  <!entity java-VM SYSTEM "../../../VM.sgml">
 
 ---------------------------------------
+Tag id
+
+XML versionen kræver, at alle tags skrives med små bogstaver og
+alle tags har formen <tag [attributer]>tagged text</tag>
+
+Afsnit tags, fx. <sect1 id="xx-beskrivende-navn"> bliver brugt
+til at give html-filerne navne, så det beskrivende navn vælges
+med omhu. Det er vistnok en god ide at bruge en bogstavkode for
+selve bogens navn, altså: erstat xx med den identifikation, som
+benyttes for den bog, du skriver på.
+
+---------------------------------------
 Notation for skrivning
 
 For at bøgerne ligner hinanden mest muligt i de viste
@@ -171,7 +187,7 @@ En normal-prompt (bash) i homedir bliver så:
  [tyge@hven ~]$
 
 Det er ikke på forhånd givet at 'otto' og 'axel'
-har login 'hven.sslug.dk', det skal fremgå af
+har login på 'hven.sslug.dk', det skal fremgå af
 eksemplet.
 
 Baggrund: Tyge Brahe (latinsk: Tycho) er en kendt
