README - beskrivelse af novice installation, cd BOGNAVN && ./configure er vist ikke nødvendig (har checket Makefile efter global ./configure og subdir ./configure er nøjagtig den samme.)

--- a/README
+++ b/README
@@ -31,7 +31,7 @@ Gør følgende (Linier med * udføres kun første gang)
   cd linuxbog
   ./configure
   cd BOGNAVN
-  ./configure
+  ./configure   # Denne configure-kørsel er "optional"
   make html
 
 Så kan du køre
