base-README korrektion om, hvor man skal køre ./configure.

--- a/README
+++ b/README
@@ -31,7 +31,6 @@ Gør følgende (Linier med * udføres kun første gang)
   cd linuxbog
   ./configure
   cd BOGNAVN
-  ./configure   # Denne configure-kørsel er "optional"
   make html
 
 Så kan du køre
@@ -43,6 +42,10 @@ http://cvs.linuxbog.dk
 configure --help fortæller om nogle options, blandt andet
 --med-alle, som får make til at generere et arkiv og en
 samlet html-version af alle bøgerne.
+
+Du kan også køre ./configure i de enkelt bog-directories.
+cd BOGNAVN &&  ./configure -- men det er kun nødvendigt,
+hvis du selv har ændret i bootstrap.subdir.
 
 Hvis du gerne vil have filerne hjem, så kan du sætte
 følgende miljø-variabel (environment-variable)
