Et par rettelser om palm

--- a/README
+++ b/README
@@ -109,9 +109,6 @@ checking for plucker-build... nej - det er ikke muligt at lave PALM udgaven
 og ud fra det kan jeg altså regne ud at jeg skal bruge programmet
 "plucker-build" for at kunne bygge bøgerne til palmpilot.
 
-TODO: Man kan sådan set ikke bygge palm fra standalone i
-øjeblikket. Hmm.
-
 Hvis du mangler nogen værktøjer må du installere dem, og køre
 configure igen. Hvis du har vanskeligt ved at finde ud af hvorfor du
 ikke kan bygge et bestemt format, kan du kigge i filen "config.log"
@@ -124,9 +121,7 @@ skrive f.eks.
 $make html
 
 for at lave html udgaven. Eller, make pdf for at lave pdf udgaven,
-osv.
-
-TODO: palm udgaven hedder palmpilot....
+osv. Bemærk at palm formatet hedder palmpilot.
 
 
 -------------------------------------------------------------------------------
@@ -492,8 +487,9 @@ Makefile.subdir  denne fil kopieres af configure til de forskellige
 configure.ac.subdir kopieres af configure til de forskellige subdirs
                     som subdir/configure.ac
 
-Endvidere kopieres scriptet "misc/insertimagesize" til
-subdir/misc/. TODO: De forskellige palm filer.
+Endvidere kopieres scriptet "misc/insertimagesize" til subdir/misc/,
+samt de forskellige palm relaterede filer fra misc til
+subdir/palm-faelles/
 
 Makefile.alle    Denne fil kopieres af configure til alle/Makefile.am,
                  hvis --med-alle argumentet blev angivet.
