Ændret --enable-softlink til --disable-softlink - softlinks er nu default for html bygning.

--- a/README
+++ b/README
@@ -70,12 +70,10 @@ $cd applikationer
 $./configure --help
 
 Ved at skrive --help vil du få en oversigt over de argumenter
-configure kan tage. I øjeblikket er det kun argumentet
-"--enable-softlink" (som gør at der ikke bliver kopieret så mange
-filer under bygning af bøgerne) som du kan give til configure
-programmet.
+configure kan tage. Som udgangspunkt burde det ikke være nødvendigt at
+anvende nogen argumenter, men der kan være situationer hvor det er ønskværdigt.
 
-Du kan nu konfigurere bygning af bogen, med
+Du kan nu konfigurere bygning af bogen, med f.eks.
 
 $./configure --enable-softlink
 
