Noget om splitstikord.pl og HTML::TreeBuilder

--- a/README
+++ b/README
@@ -504,3 +504,17 @@ Den centrale del af det videre byggeforløb ligger i filerne
 "Makefile.subdir" (der via toplevel/configure og subdir/configure
 bliver til subdir/Makefile). Denne fil er den centrale at modificere
 for at rette de tilbageværende problemer i byggeprocessen.
+
+splitstikord.pl
+---------------
+
+Scriptet 'splitstikord.pl' der sørger for at blande alle
+stikord.html filerne sammen fra alle bøgerne, og dernæst lave
+en fil for hvert bogstav, kræver at perl-pakken HTML::TreeBuilder
+er installeret. Det er ikke alle der har den default.
+
+På tyge.sslug.dk der kører Red Hat 9.0 (for tiden), er pakken
+http://dag.wieers.com/packages/perl-HTML-Tree/perl-HTML-Tree-3.17-0.dag.rh90.noarch.rpm
+blevet installeret. Original-pakken findes på
+http://search.cpan.org/dist/HTML-Tree/
+
