--- a/signatur/TODO
+++ b/signatur/TODO
@@ -14,7 +14,7 @@
 
 - Mere vigtigt: Der mangler stadig (og, det er egentlig det vigtigeste) 
   beskrivelser af hvordan man bruger det certifikat man får med de 
-  forskellige Linux programmer. (Alle!)
+  forskellige Linux-programmer. (Alle!)
 
 - På et eller andet tidspunkt skal selve proceduren for at oploade sit 
   certifikat på KMD's sider dokumenteres. Sidst jeg prøvede knækkede 
