Indhold flyttet til dokumentation/ftav.sgml Fremtidige rettelser skal foregå der.

--- a/README
+++ b/README
@@ -1,5 +1,26 @@
 Dette er README filen til bøgerne "Linux -- Friheden til at vælge". 
 
+Indholdet er flyttet over i:
+http://www..linuxbog.dk/dokumentation/bog/ftav.html
+(dokumentation/ftav.sgml)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Herunder slettes snart (chlor):
 -------------------------------------------------------------------------------
 * Indhold
 
